--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,10 @@ cryptography==37.0.4
 decorator==5.1.1
 defusedxml==0.7.1
 Django==4.0.4
+django-debug-toolbar==3.6.0
+django-debug-toolbar-template-profiler==2.1.0
 django-environ==0.9.0
+django-extensions==3.2.0
 executing==0.8.3
 idna==3.3
 ipython==8.3.0
@@ -20,11 +23,14 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.1
 prompt-toolkit==3.0.29
+psycopg2-binary==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
+pydotplus==2.0.2
 Pygments==2.12.0
 PyJWT==2.4.0
+pyparsing==3.0.9
 python3-openid==3.2.0
 requests==2.28.1
 requests-oauthlib==1.3.1
@@ -36,3 +42,4 @@ stack-data==0.2.0
 traitlets==5.2.1.post0
 urllib3==1.26.11
 wcwidth==0.2.5
+wrapt==1.14.1
